Backtracking: LetterCombinationsOfPhoneNumber added letterCombinationsMyApproach()